<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2" 
     android:orientation="vertical" >
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >
        
		        <TextView
		        android:layout_width="0dp"
		        android:layout_weight="2"
		        
		        android:layout_height="match_parent"
		       />

		       <TextView
		           android:id="@+id/Settings"
		           android:layout_width="0dp"
		           android:layout_height="wrap_content"
		         
		           android:layout_marginTop="15dp"
		           android:layout_weight="2"
		           android:text="Settings"
		           android:textColor="#FFFFFF"
		           android:textSize="16sp" />

		       <TextView
       
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		       />
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       
        
        android:orientation="vertical" 
        android:layout_weight="10">

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:orientation="horizontal" >

			        <TextView
			            android:id="@+id/zidongtishi"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="50dp"
			            android:layout_marginRight="1dp"
			            android:layout_marginTop="0dp"
			            android:paddingRight="6dp"
			            android:paddingTop="13dp"
			            android:text="@string/zidongtishi"
			            android:textColor="#000000"
			            android:textSize="18sp"
			            android:textStyle="normal" />

			        <EditText
			            android:id="@+id/shi"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="12dp"
			            android:background="#000000"
			            android:inputType="number"
			            android:text="@string/shimoren"
			            android:textColor="#FFFFFF" />

			        <TextView
			            android:id="@+id/textView_shi"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="5dp"
			            android:text="@string/shi"
			            android:textAppearance="?android:attr/textAppearanceSmall"
			            android:textSize="16sp" />

			        <EditText
			            android:id="@+id/fen"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="12dp"
			            android:background="#000000"
			            android:inputType="number"
			            android:text="@string/fenmoren"
			            android:textColor="#FFFFFF" />

		           <TextView
		               android:id="@+id/textView_fen"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:layout_marginLeft="10dp"
		               android:text="@string/fen"
		               android:textAppearance="?android:attr/textAppearanceSmall"
		               android:textSize="16sp" />

    		</LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/zidongtishi"
                android:orientation="horizontal" >

				    <RadioButton
				        android:id="@+id/zidongtishirun"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="20dp"
				        android:layout_marginTop="0dp"
				        android:checked="true"
				        android:text="@string/yes"
				        android:textColor="#000000" />

			        <RadioButton
			            android:id="@+id/zidongtishistop"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="5dp"
			            android:layout_marginTop="0dp"
			            android:text="@string/no"
			            android:textColor="#000000" >

			         </RadioButton>
    		</RadioGroup>
    </LinearLayout>
     <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1.1"
              android:orientation="horizontal" >
	    
	    		 	<ImageView
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="25dp"
                   
                       android:layout_marginTop="0dp"
                    
                      />
                      	
                   <ImageView
                       android:id="@+id/returnButton"
                       android:layout_width="0dp"
                       android:layout_height="25dp"
                       android:layout_marginLeft="10dp"
                       android:layout_marginTop="0dp"
                       android:onClick="returnToNeiYe"
                       android:src="@drawable/rightarrow" 
                        android:layout_weight="1"/>
                    <ImageView
                      
                       android:layout_width="0dp"
                       android:layout_height="25dp"
                   	   android:layout_weight="10"
                       android:layout_marginTop="0dp"
                    
                      />
	</LinearLayout>
	<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1.5"
              android:orientation="horizontal" >
	</LinearLayout>
</LinearLayout>